Fix header position on smaller screen sizes

--- a/src/resources/postcss/tribe-common-admin/settings/_form.pcss
+++ b/src/resources/postcss/tribe-common-admin/settings/_form.pcss
@@ -51,7 +51,7 @@
 			padding-top: var(--tec-spacer-7);
 
 			&.tec-settings-form__subnav-active {
-				padding-top: var(--tec-spacer-9);
+				padding-top: var(--tec-spacer-12);
 			}
 
 			&.tec-events-settings__upsell-form {
